--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10643,4 +10643,14 @@ a.text-dark:focus {
     border-color: #dee2e6;
   }
 }
+#loading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px; /* Adjust the height as needed */
+}
 
+#loading img {
+    width: 50px; /* Adjust the width as needed */
+    height: 50px; /* Adjust the height as needed */
+}
